# lorax

./: .flake8  .gitignore  Jax_xor.py  LICENSE  Makefile  Pipfile  README.md  fizzbuzz.py  imdb_config.py  imdb_lstm.py  jax_fizz_buzz.ipynb  jax_fizz_buzz.py  jax_xor.ipynb  mnist.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  xor.py  xor_config.py
colin_net/: __init__.py  base.py  data.py  layers.py  loss.py  nn.py  tensor.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
src/colin_net/: __init__.py  base.py  config.py  data.py  layers.py  loss.py  metrics.py  nn.py  optim.py  rng.py  tensor.py  train.py
src/colin_net/models/: __init__.py  base_model.py  mlp.py  rnn.py
src/colin_net/nn/: __init__.py  mlp.py  model.py  rnn.py
src/colin_net/nn/layers/: __init__.py  core.py  seq.py
src/lorax/: config.py  data.py  loss.py  metrics.py  module.py  optim.py  parameter.py  rng.py  tensor.py  train.py
src/lorax/models/: __init__.py  base_model.py  mlp.py  rnn.py
src/lorax/nn/: __init__.py  activations.py  initilizers.py  module.py
src/lorax/nn/functional/: __init__.py  activations.py  initializers.py  initilizers.py
src/lorax/nn/layers/: __init__.py  core.py  rnn.py  seq.py
test/: test_config.py  test_layers.py
tests/: test_config.py  test_layers.py
