[tool.poetry]
name = "lorax"
version = "0.1.0"
description = "Deep Learning Framework using Jax"
authors = ["Colin Sullivan <csulliva@brandeis.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.2.9"
jaxlib = "^0.1.59"
numpy = "^1.20.0"
tqdm = "^4.56.0"
pydantic = "~1.7.3"
tokenizers = "^0.10.0"
wandb = "^0.10.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.11.1"
pydocstyle = "^5.1.1"
black = "^20.8b1"
isort = "^5.7.0"
jupyterlab = "^3.0.6"
plotly = "^4.14.3"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
mkdocs-material = "^6.2.6"
ipdb = "^0.13.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 88

[tool.isort]
profile="black"
line_length = 88