[tool.poetry]
name = "lorax"
version = "0.1.0"
description = "Deep Learning Framework using Jax"
authors = ["Colin Sullivan <csulliva@brandeis.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10.0"
jax = "^0.2.26"
jaxlib = "^0.1.75"
numpy = "^1.21.4"
pydantic = "^1.8.2"
wandb = "^0.12.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
mkdocs-material = "^8.1.2"
ipdb = "^0.13.9"
mypy = "^0.920"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 88

[tool.isort]
profile="black"
line_length = 88

[tool.coverage.html]
show_contexts = true